sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value pos
	pos = 1;
        ^AlgGnomeSort:6: error: not found: value pos
 while(pos != getNombreValeurs())
       ^AlgGnomeSort:8: error: not found: value pos
	if(pos > 0)
           ^AlgGnomeSort:10: error: not found: value pos
		if(plusPetit(pos - 1, pos))
                             ^AlgGnomeSort:12: error: not found: value pos
			pos = pos + 1;
                        ^AlgGnomeSort:15: error: not found: value pos
			echange(pos - 1, pos);
                                ^AlgGnomeSort:16: error: not found: value pos
			pos = pos - 1;
                        ^AlgGnomeSort:20: error: not found: value pos
		pos = pos + 1;
                ^